se le agregaron las cambios de acuerdo a la guia

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-
+    <h1> Proyecto de sitio Web 2021 - periodo 16-01 </h1>
+    <h3> Ingeniria de sitemas </h3>
+    <p> Nombre : Luisa Fernanda Ramos Romero</p>
+    <br>
+    <p>12 de febrero de 2021 </p>
 </body>
 
 </html>
