--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
             <div>3 / 3</div>
             <img src="img/Page_3.png " style="width:100% ">
         </div>
+        <div>
+            <div>3 / 4</div>
+            <img src="img/imagenhtml.jpg " style="width:100% ">
+        </div>
 
         <footer>
             <br>
