cambios de la fase 2 diseño de sitios web

--- a/Aprendizaje.html
+++ b/Aprendizaje.html
@@ -13,7 +13,7 @@
 <body>
     <div id="nav">
         <ul class="nav-menu">
-            <li><a href="#" class="three-d">
+            <li><a href="index.html" class="three-d">
                 Incio
                 <span class="three"><span class="front">Inicio</span><span class="back">Inicio</span></span>
             </a></li>
@@ -72,25 +72,16 @@
         </ul>
     </div>
     <section class="container">
-        <h3>Estándares y pautas para el diseño de páginas Web </h3>
-        <p>Los estándares y pautas para el diseño de un sitio Web son un conjunto de elementos de vital importancia a considerar antes de su realización para obtener una buena usabilidad. Todos estos dependen de que el visitante primero llegue hasta el sitio
-            y una vez en su interior, cumpla con los objetivos que lo condujeron hacia él de una manera rápida y simple, garantizando un futuro regreso. En ocasiones se piensa que sólo con tener un sitio Web en Internet se logra que sea visitando por
-            las personas que tengan interés en su contenido, pero realmente no funciona así tan simple.
+        <h3>Lorem ipsum dolor sit amet. </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus harum nostrum accusantium velit dolorem in sit temporibus, voluptatem explicabo omnis error eos!
         </p>
 
     </section>
-
     <article class="article">
-        <h3> Realización de un diseño en función de los requerimientos del sitio y de los usuarios </h3>
-        <p>El diseño del sitio es una herramienta fundamental para atraer a los usuarios y el éxito que se obtenga en muchos otros aspectos como la promoción, la velocidad de carga, la afinidad de los usuarios entre otros, dependerá en buena medida de las
-            consideraciones que se realicen al diseñar. Es importante destacar que el diseño de las páginas se debe realizar pensando en el cliente y no en el administrador, escogiendo cuidadosamente todos los elementos que se utilicen y empleando solamente
-            los recursos necesarios para comunicar el mensaje que se desee, logrando que el sitio tenga un aspecto sencillo y nada recargado. La consistencia en la apariencia y sensación es importante mantener garantizando el mismo aspecto y el diseño
-            en todas las páginas. </p>
+        <h3> Lorem ipsum dolor sit amet. </h3>
+        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, cupiditate temporibus blanditiis aspernatur odio voluptatem voluptatum sunt dicta nobis eveniet nulla iusto. </p>
         <br>
-        <br>
-        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
 
 
     </article>
