--- a/Tema1.html
+++ b/Tema1.html
@@ -13,7 +13,7 @@
 <body>
     <div id="nav">
         <ul class="nav-menu">
-            <li><a href="#" class="three-d">
+            <li><a href="index.html" class="three-d">
                 Incio
                 <span class="three"><span class="front">Inicio</span><span class="back">Inicio</span></span>
             </a></li>
@@ -37,7 +37,7 @@
                 <span class="three"><span class="front">Recursos digitales</span><span class="back"> Recursos digitales</span></span>
             </a>
                 <ul class="clearfix unstyled drop-menu">
-                    <li><a href="video.html" class="three-d">
+                    <li><a href="#" class="three-d">
                     Recuro1
                     <span class="three"><span class="front">Recurso1</span><span class="back">Recurso1</span></span>
                 </a></li>
@@ -64,7 +64,7 @@
                 </ul>
 
             </li>
-            <li><a href="Autor.html" class="three-d">
+            <li><a href="#" class="three-d">
                 Autor
                 <span class="three"><span class="front">Autor</span><span class="back">Autor</span></span>
             </a></li>
@@ -72,28 +72,27 @@
         </ul>
     </div>
     <section class="container">
-        <h3>Estándares y pautas para el diseño de páginas Web </h3>
-        <p>Los estándares y pautas para el diseño de un sitio Web son un conjunto de elementos de vital importancia a considerar antes de su realización para obtener una buena usabilidad. Todos estos dependen de que el visitante primero llegue hasta el sitio
-            y una vez en su interior, cumpla con los objetivos que lo condujeron hacia él de una manera rápida y simple, garantizando un futuro regreso. En ocasiones se piensa que sólo con tener un sitio Web en Internet se logra que sea visitando por
-            las personas que tengan interés en su contenido, pero realmente no funciona así tan simple.
+        <h3>Que es el diseño de sitios web </h3>
+        <p>El diseño Web es una de las disciplinas que más adeptos está ganando desde hace una década y mejores resultados están proporcionando laboral y económicamente. Pero haciendo caso omiso a los bienes terrenales el mundo fascinante de la Web involucra
+            un sin número de elementos multidisciplinarios y diversos que acarrean gran riqueza en concepto y aplicación. En esta sección se presentaran los primeros temas claves para el conocimiento de las mejores prácticas en el diseño Web.
+
         </p>
+        <br>
+        <hr>
+        <h3> Diseño de sitios web </h3>
+        <p>
+            Parece habitual confundir las disciplinas del diseño y desarrollo web, nombrándolas indiferentemente, refiriéndose a ambas a la vez. Las dos tienen lugar en el proceso de elaboración de un sitio web, pero cada una ocupa una parte del proyecto. Esto no
+            quiere decir que estén separadas por completo, es vital que exista una sinergia, manteniendo comunicación directa la una con la otra. En idesweb.es se discute brevemente sobre las diferencias entre las materias y la importancia de su vínculo
+            a lo largo de un proyecto web. El encargado de la parte visual de la web solía ser el mismo programador o un diseñador gráfico, habituado a trabajar con formatos de impresión. A causa de ello, las páginas carecían de movimiento e interacción.
+            Era importante que el encargado de la parte gráfica comprendiera también las capacidades y limitaciones de la web. Fue cuestión de tiempo que los diseñadores se adaptaran a esta materia y se hablara de la figura del diseñador web. Además de
+            la parte gráfica, el diseño web se ocupa de la experiencia de usuario. Determina los objetivos del proyecto y las necesisades de los usuarios. Define la arquitectura web, el número de páginas y bloques de contenido de los que dispondrá el
+            sitio. Estudia la interacción de usuario, las funciones y la navegación que se realizará en la web. Estructura el contenido en las diferentes páginas del sitio, mediante composiciones o plantillas, con el objetivo de elaborar prototipos o
+            wireframes.
+
+        </p>
+        <br>
 
     </section>
-
-    <article class="article">
-        <h3> Realización de un diseño en función de los requerimientos del sitio y de los usuarios </h3>
-        <p>El diseño del sitio es una herramienta fundamental para atraer a los usuarios y el éxito que se obtenga en muchos otros aspectos como la promoción, la velocidad de carga, la afinidad de los usuarios entre otros, dependerá en buena medida de las
-            consideraciones que se realicen al diseñar. Es importante destacar que el diseño de las páginas se debe realizar pensando en el cliente y no en el administrador, escogiendo cuidadosamente todos los elementos que se utilicen y empleando solamente
-            los recursos necesarios para comunicar el mensaje que se desee, logrando que el sitio tenga un aspecto sencillo y nada recargado. La consistencia en la apariencia y sensación es importante mantener garantizando el mismo aspecto y el diseño
-            en todas las páginas. </p>
-        <br>
-        <br>
-        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
-
-
-    </article>
 
 
 
