--- a/Tema2.html
+++ b/Tema2.html
@@ -13,7 +13,7 @@
 <body>
     <div id="nav">
         <ul class="nav-menu">
-            <li><a href="#" class="three-d">
+            <li><a href="index.html" class="three-d">
                 Incio
                 <span class="three"><span class="front">Inicio</span><span class="back">Inicio</span></span>
             </a></li>
@@ -26,7 +26,7 @@
                         Tema1
                         <span class="three"><span class="front">Tema1</span><span class="back">Tema1</span></span>
                     </a></li>
-                    <li><a href="Tema2.html" class="three-d">
+                    <li><a href="#" class="three-d">
                         Tema2
                         <span class="three"><span class="front">Tema2</span><span class="back">Tema2</span></span>
                     </a></li>
@@ -37,7 +37,7 @@
                 <span class="three"><span class="front">Recursos digitales</span><span class="back"> Recursos digitales</span></span>
             </a>
                 <ul class="clearfix unstyled drop-menu">
-                    <li><a href="video.html" class="three-d">
+                    <li><a href="#" class="three-d">
                     Recuro1
                     <span class="three"><span class="front">Recurso1</span><span class="back">Recurso1</span></span>
                 </a></li>
@@ -72,29 +72,65 @@
         </ul>
     </div>
     <section class="container">
-        <h3>Estándares y pautas para el diseño de páginas Web </h3>
-        <p>Los estándares y pautas para el diseño de un sitio Web son un conjunto de elementos de vital importancia a considerar antes de su realización para obtener una buena usabilidad. Todos estos dependen de que el visitante primero llegue hasta el sitio
-            y una vez en su interior, cumpla con los objetivos que lo condujeron hacia él de una manera rápida y simple, garantizando un futuro regreso. En ocasiones se piensa que sólo con tener un sitio Web en Internet se logra que sea visitando por
-            las personas que tengan interés en su contenido, pero realmente no funciona así tan simple.
+        <h3>Etiquetas Básicas de HTML, atributos y valores</h3>
+        <p> HTML este es un lenguaje de marcado estándar para crear páginas web y text markup languaje, describe la estructura de una pagina web, consta de una serie de elementos y estos elementos le dicen al navegador como mostrar el contenido. También estos
+            elementos etiquetan partes de contenido como “esto es un encabezado”, “esto es un párrafo”, “esto es un enlace”, etc. El HTML tiene unos atributos y valores, los atributos proporcionan información adicional sobre los elementos HTML porque
+            todos los elementos HTML pueden tener atributos, estos atributos proporcionan información adicional sobre los elementos, también siempre se especifican en la etiqueta de inicio y generalmente vienen en pares de nombre/valor como:
+            <br>
+            <br> nombre =” valor”, existen atributos como: <br>
+            <br>El atributo href, atributo src, atributo de ancho y alto, atributo alt, atributo de estilo, atributo Lang, atributo de título.
+            <br>
+            <br> Los elementos en HTML tienen atributos; estos son valores adicionales que configuran los elementos o ajustan su comportamiento de diversas formas para cumplir los criterios de los usuarios.
         </p>
 
     </section>
-
     <article class="article">
         <h3> Realización de un diseño en función de los requerimientos del sitio y de los usuarios </h3>
-        <p>El diseño del sitio es una herramienta fundamental para atraer a los usuarios y el éxito que se obtenga en muchos otros aspectos como la promoción, la velocidad de carga, la afinidad de los usuarios entre otros, dependerá en buena medida de las
-            consideraciones que se realicen al diseñar. Es importante destacar que el diseño de las páginas se debe realizar pensando en el cliente y no en el administrador, escogiendo cuidadosamente todos los elementos que se utilicen y empleando solamente
-            los recursos necesarios para comunicar el mensaje que se desee, logrando que el sitio tenga un aspecto sencillo y nada recargado. La consistencia en la apariencia y sensación es importante mantener garantizando el mismo aspecto y el diseño
-            en todas las páginas. </p>
+        <p>La pagina web se creo con el fin de mostrar las diferentes actividades, los recursos usados, los aprendizajes y los diferentes temas que usaremos, dentro de ellos se mostraran vídeos, imágenes, con el fin que el usuario pueda sentirse agusto al
+            momento de utilizar nuestra pagina web, estos se publicaran debidamente citados, con su respectivas imágenes que ilustren los diferentes temas que abordaremos dentro del sitio.</p>
         <br>
-        <br>
-        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
 
 
     </article>
+    <div class="container">
+        <div class="mySlides">
+            <div class="numbertext">1 / 3</div>
+            <img src="img/Page_1.png" style="width:100% ">
+        </div>
 
+        <div class="mySlides ">
+            <div class="numbertext ">2 / 3</div>
+            <img src="img/Page2.png " style="width:100% ">
+        </div>
+
+        <div class="mySlides ">
+            <div class="numbertext ">3 / 3</div>
+            <img src="img/Page_3.png " style="width:100% ">
+        </div>
+
+
+
+        <a class="prev " onclick="plusSlides(-1) ">❮</a>
+        <a class="next " onclick="plusSlides(1) ">❯</a>
+
+        <div class="caption-container ">
+            <p id="caption "></p>
+        </div>
+
+        <div class="row ">
+            <div class="column ">
+                <img class="demo cursor " src="img/Page_1.png" style="width:100% " onclick="currentSlide(1) " alt="The Woods ">
+            </div>
+            <div class="column ">
+                <img class="demo cursor " src="img/Page2.png " style="width:100% " onclick="currentSlide(2) " alt="Cinque Terre ">
+            </div>
+            <div class="column ">
+                <img class="demo cursor " src="img/Page_3.png " style="width:100% " onclick="currentSlide(3) " alt="Mountains and fjords ">
+            </div>
+
+        </div>
+    </div>
+    <script src="js/scripts.js "></script>
 
 
     <footer>
