--- a/video.html
+++ b/video.html
@@ -13,7 +13,7 @@
 <body>
     <div id="nav">
         <ul class="nav-menu">
-            <li><a href="#" class="three-d">
+            <li><a href="index.html" class="three-d">
                 Incio
                 <span class="three"><span class="front">Inicio</span><span class="back">Inicio</span></span>
             </a></li>
@@ -37,7 +37,7 @@
                 <span class="three"><span class="front">Recursos digitales</span><span class="back"> Recursos digitales</span></span>
             </a>
                 <ul class="clearfix unstyled drop-menu">
-                    <li><a href="video.html" class="three-d">
+                    <li><a href="#" class="three-d">
                     Recuro1
                     <span class="three"><span class="front">Recurso1</span><span class="back">Recurso1</span></span>
                 </a></li>
@@ -64,7 +64,7 @@
                 </ul>
 
             </li>
-            <li><a href="Autor.html" class="three-d">
+            <li><a href="#" class="three-d">
                 Autor
                 <span class="three"><span class="front">Autor</span><span class="back">Autor</span></span>
             </a></li>
@@ -73,27 +73,10 @@
     </div>
     <section class="container">
         <h3>Estándares y pautas para el diseño de páginas Web </h3>
-        <p>Los estándares y pautas para el diseño de un sitio Web son un conjunto de elementos de vital importancia a considerar antes de su realización para obtener una buena usabilidad. Todos estos dependen de que el visitante primero llegue hasta el sitio
-            y una vez en su interior, cumpla con los objetivos que lo condujeron hacia él de una manera rápida y simple, garantizando un futuro regreso. En ocasiones se piensa que sólo con tener un sitio Web en Internet se logra que sea visitando por
-            las personas que tengan interés en su contenido, pero realmente no funciona así tan simple.
-        </p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/F664curMqso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
     </section>
-
-    <article class="article">
-        <h3> Realización de un diseño en función de los requerimientos del sitio y de los usuarios </h3>
-        <p>El diseño del sitio es una herramienta fundamental para atraer a los usuarios y el éxito que se obtenga en muchos otros aspectos como la promoción, la velocidad de carga, la afinidad de los usuarios entre otros, dependerá en buena medida de las
-            consideraciones que se realicen al diseñar. Es importante destacar que el diseño de las páginas se debe realizar pensando en el cliente y no en el administrador, escogiendo cuidadosamente todos los elementos que se utilicen y empleando solamente
-            los recursos necesarios para comunicar el mensaje que se desee, logrando que el sitio tenga un aspecto sencillo y nada recargado. La consistencia en la apariencia y sensación es importante mantener garantizando el mismo aspecto y el diseño
-            en todas las páginas. </p>
-        <br>
-        <br>
-        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
-
-
-    </article>
 
 
 
