--- a/Tema1.html
+++ b/Tema1.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseño de sitios web</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -73,21 +74,19 @@
     </div>
     <section class="container">
         <h3>Que es el diseño de sitios web </h3>
-        <p>El diseño Web es una de las disciplinas que más adeptos está ganando desde hace una década y mejores resultados están proporcionando laboral y económicamente. Pero haciendo caso omiso a los bienes terrenales el mundo fascinante de la Web involucra
+        <p  class="font-weight-normal"></p>>El diseño Web es una de las disciplinas que más adeptos está ganando desde hace una década y mejores resultados están proporcionando laboral y económicamente. Pero haciendo caso omiso a los bienes terrenales el mundo fascinante de la Web involucra
             un sin número de elementos multidisciplinarios y diversos que acarrean gran riqueza en concepto y aplicación. En esta sección se presentaran los primeros temas claves para el conocimiento de las mejores prácticas en el diseño Web.
 
         </p>
         <br>
         <hr>
         <h3> Diseño de sitios web </h3>
-        <p>
-            Parece habitual confundir las disciplinas del diseño y desarrollo web, nombrándolas indiferentemente, refiriéndose a ambas a la vez. Las dos tienen lugar en el proceso de elaboración de un sitio web, pero cada una ocupa una parte del proyecto. Esto no
-            quiere decir que estén separadas por completo, es vital que exista una sinergia, manteniendo comunicación directa la una con la otra. En idesweb.es se discute brevemente sobre las diferencias entre las materias y la importancia de su vínculo
-            a lo largo de un proyecto web. El encargado de la parte visual de la web solía ser el mismo programador o un diseñador gráfico, habituado a trabajar con formatos de impresión. A causa de ello, las páginas carecían de movimiento e interacción.
-            Era importante que el encargado de la parte gráfica comprendiera también las capacidades y limitaciones de la web. Fue cuestión de tiempo que los diseñadores se adaptaran a esta materia y se hablara de la figura del diseñador web. Además de
-            la parte gráfica, el diseño web se ocupa de la experiencia de usuario. Determina los objetivos del proyecto y las necesisades de los usuarios. Define la arquitectura web, el número de páginas y bloques de contenido de los que dispondrá el
-            sitio. Estudia la interacción de usuario, las funciones y la navegación que se realizará en la web. Estructura el contenido en las diferentes páginas del sitio, mediante composiciones o plantillas, con el objetivo de elaborar prototipos o
-            wireframes.
+        <p class="font-weight-normal"></p>> Parece habitual confundir las disciplinas del diseño y desarrollo web, nombrándolas indiferentemente, refiriéndose a ambas a la vez. Las dos tienen lugar en el proceso de elaboración de un sitio web, pero cada una ocupa una parte del proyecto.
+        Esto no quiere decir que estén separadas por completo, es vital que exista una sinergia, manteniendo comunicación directa la una con la otra. En idesweb.es se discute brevemente sobre las diferencias entre las materias y la importancia de su vínculo
+        a lo largo de un proyecto web. El encargado de la parte visual de la web solía ser el mismo programador o un diseñador gráfico, habituado a trabajar con formatos de impresión. A causa de ello, las páginas carecían de movimiento e interacción.
+        Era importante que el encargado de la parte gráfica comprendiera también las capacidades y limitaciones de la web. Fue cuestión de tiempo que los diseñadores se adaptaran a esta materia y se hablara de la figura del diseñador web. Además de la
+        parte gráfica, el diseño web se ocupa de la experiencia de usuario. Determina los objetivos del proyecto y las necesisades de los usuarios. Define la arquitectura web, el número de páginas y bloques de contenido de los que dispondrá el sitio.
+        Estudia la interacción de usuario, las funciones y la navegación que se realizará en la web. Estructura el contenido en las diferentes páginas del sitio, mediante composiciones o plantillas, con el objetivo de elaborar prototipos o wireframes.
 
         </p>
         <br>
