--- a/Tema2.html
+++ b/Tema2.html
@@ -73,7 +73,7 @@
     </div>
     <section class="container">
         <h3>Etiquetas Básicas de HTML, atributos y valores</h3>
-        <p> HTML este es un lenguaje de marcado estándar para crear páginas web y text markup languaje, describe la estructura de una pagina web, consta de una serie de elementos y estos elementos le dicen al navegador como mostrar el contenido. También estos
+        <p class="font-weight-normal"> HTML este es un lenguaje de marcado estándar para crear páginas web y text markup languaje, describe la estructura de una pagina web, consta de una serie de elementos y estos elementos le dicen al navegador como mostrar el contenido. También estos
             elementos etiquetan partes de contenido como “esto es un encabezado”, “esto es un párrafo”, “esto es un enlace”, etc. El HTML tiene unos atributos y valores, los atributos proporcionan información adicional sobre los elementos HTML porque
             todos los elementos HTML pueden tener atributos, estos atributos proporcionan información adicional sobre los elementos, también siempre se especifican en la etiqueta de inicio y generalmente vienen en pares de nombre/valor como:
             <br>
@@ -86,8 +86,8 @@
     </section>
     <article class="article">
         <h3> Realización de un diseño en función de los requerimientos del sitio y de los usuarios </h3>
-        <p>La pagina web se creo con el fin de mostrar las diferentes actividades, los recursos usados, los aprendizajes y los diferentes temas que usaremos, dentro de ellos se mostraran vídeos, imágenes, con el fin que el usuario pueda sentirse agusto al
-            momento de utilizar nuestra pagina web, estos se publicaran debidamente citados, con su respectivas imágenes que ilustren los diferentes temas que abordaremos dentro del sitio.</p>
+        <p class="font-weight-normal"></p>> La pagina web se creo con el fin de mostrar las diferentes actividades, los recursos usados, los aprendizajes y los diferentes temas que usaremos, dentro de ellos se mostraran vídeos, imágenes, con el fin que el usuario pueda sentirse agusto
+        al momento de utilizar nuestra pagina web, estos se publicaran debidamente citados, con su respectivas imágenes que ilustren los diferentes temas que abordaremos dentro del sitio.</p>
         <br>
 
 
