--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseño de sitios web</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 </head>
 
 <body>
-    <div id="nav">
+    <div id="nav" class="font-weight-light">
         <ul class="nav-menu">
             <li><a href="#" class="three-d">
                 Incio
@@ -69,45 +74,45 @@
                 <span class="three"><span class="front">Autor</span><span class="back">Autor</span></span>
             </a></li>
 
-        </ul>
-    </div>
-    <section class="container">
-        <h3>Estándares y pautas para el diseño de páginas Web </h3>
-        <p>Los estándares y pautas para el diseño de un sitio Web son un conjunto de elementos de vital importancia a considerar antes de su realización para obtener una buena usabilidad. Todos estos dependen de que el visitante primero llegue hasta el sitio
-            y una vez en su interior, cumpla con los objetivos que lo condujeron hacia él de una manera rápida y simple, garantizando un futuro regreso. En ocasiones se piensa que sólo con tener un sitio Web en Internet se logra que sea visitando por
-            las personas que tengan interés en su contenido, pero realmente no funciona así tan simple.
-        </p>
+            </u>
 
-    </section>
+            <section class="container">
+                <h3>Estándares y pautas para el diseño de páginas Web </h3>
+                <p class="font-weight-normal">Los estándares y pautas para el diseño de un sitio Web son un conjunto de elementos de vital importancia a considerar antes de su realización para obtener una buena usabilidad. Todos estos dependen de que el visitante primero llegue hasta
+                    el sitio y una vez en su interior, cumpla con los objetivos que lo condujeron hacia él de una manera rápida y simple, garantizando un futuro regreso. En ocasiones se piensa que sólo con tener un sitio Web en Internet se logra que sea
+                    visitando por las personas que tengan interés en su contenido, pero realmente no funciona así tan simple.
+                </p>
 
-    <article class="article">
-        <h3> Realización de un diseño en función de los requerimientos del sitio y de los usuarios </h3>
-        <p>El diseño del sitio es una herramienta fundamental para atraer a los usuarios y el éxito que se obtenga en muchos otros aspectos como la promoción, la velocidad de carga, la afinidad de los usuarios entre otros, dependerá en buena medida de las
-            consideraciones que se realicen al diseñar. Es importante destacar que el diseño de las páginas se debe realizar pensando en el cliente y no en el administrador, escogiendo cuidadosamente todos los elementos que se utilicen y empleando solamente
-            los recursos necesarios para comunicar el mensaje que se desee, logrando que el sitio tenga un aspecto sencillo y nada recargado. La consistencia en la apariencia y sensación es importante mantener garantizando el mismo aspecto y el diseño
-            en todas las páginas. </p>
-        <br>
-        <br>
-        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </section>
 
-
-
-    </article>
+            <article class="article">
+                <h3> Realización de un diseño en función de los requerimientos del sitio y de los usuarios </h3>
+                <p class="font-weight-normal">El diseño del sitio es una herramienta fundamental para atraer a los usuarios y el éxito que se obtenga en muchos otros aspectos como la promoción, la velocidad de carga, la afinidad de los usuarios entre otros, dependerá en buena medida
+                    de las consideraciones que se realicen al diseñar. Es importante destacar que el diseño de las páginas se debe realizar pensando en el cliente y no en el administrador, escogiendo cuidadosamente todos los elementos que se utilicen
+                    y empleando solamente los recursos necesarios para comunicar el mensaje que se desee, logrando que el sitio tenga un aspecto sencillo y nada recargado. La consistencia en la apariencia y sensación es importante mantener garantizando
+                    el mismo aspecto y el diseño en todas las páginas. </p>
+                <br>
+                <br>
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500"
+                    style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
 
 
-    <footer>
-        <br>
-        <p> &copy; Todos los derechos reservados - LC + MARZO/2021 COL </p>
-        <p> Diseñado por mi</p>
+            </article>
 
-        <p>DISEÑO DE SITIOS WEB</p>
-        <p>GRUPO : 301122_32</p>
-        <p>SKYPE : Luisa Ramos Romero</p>
-        <p>CORREO: lidaesth@gmail.com</p>
-        <P>AUTORES: luisa fernando ramos romero</P>
-    </footer>
+
+
+            <footer>
+                <br>
+                <p> &copy; Todos los derechos reservados - LC + MARZO/2021 COL </p>
+                <p> Diseñado por mi</p>
+
+                <p>DISEÑO DE SITIOS WEB</p>
+                <p>GRUPO : 301122_32</p>
+                <p>SKYPE : Luisa Ramos Romero</p>
+                <p>CORREO: lidaesth@gmail.com</p>
+                <P>AUTORES: luisa fernando ramos romero</P>
+            </footer>
 
 </body>
 
