--- a/Autor.html
+++ b/Autor.html
@@ -81,8 +81,7 @@
         <p>SKYPE : Luisa Ramos Romero</p>
         <p>Codigo : 1193114069</p>
         <p>CORREO: lidaesth@gmail.com</p>
-        <iframe width="420" height="345" src="https://www.youtube.com/watch?v=jIIeALXVksA">
-        </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jIIeALXVksA?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
     </section>
